--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-checkbox": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
