--- a/package.json
+++ b/package.json
@@ -19,20 +19,32 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
+    "expo-checkbox": "~2.2.0",
+    "expo-constants": "~13.2.4",
     "expo-file-system": "~14.1.0",
+    "expo-font": "^11.0.1",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-sensors": "~11.4.0",
     "expo-sqlite": "^11.0.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-elements": "^3.4.2",
+    "react-native-svg": "^13.6.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "expo-checkbox": "~2.2.0",
-    "expo-constants": "~13.2.4",
-    "expo-sensors": "~11.4.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
   },
   "private": true
 }
