--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@giphy/js-fetch-api": "^4.4.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@rneui/base": "^4.0.0-rc.7",
@@ -32,14 +33,21 @@
     "react-native": "0.69.6",
     "react-native-circular-progress": "^1.3.7",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "webpack-dev-server": "^4.11.1"
   },
   "rnpm": {
     "assets": [
